# UnnamedEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md
Content/Engine/: Basic.frag  Basic.frag.spv  Basic.vert  Basic.vert.spv  Deferred.frag  Deferred.vert
Content/Levels/Sponza/: sponza.ul  sponzaobjects.udf
Content/Levels/SuperBasic/: capsue.udf  capsule.ul
Content/Levels/SuperBasic/nanosuit/: LICENSE.txt
Content/Levels/Test/: TestLevel.ul
Content/Test/: BasicEntity.udf  BasicPlayer.udf  TestLevel.ul
Glitter/Shaders/: GridVoxelize.frag.glsl  GridVoxelize.vert.glsl
Glitter/Shaders/GridVoxelize/: GridVoxelize.geom.glsl
Glitter/Shaders/Shaders/GridVoxelize/: GridVoxelize.frag.glsl  GridVoxelize.vert.glsl
Glitter/Sources/: glitter.h  main.cpp  mesh.hpp
Glitter/Sources/Engine/Base/Client/: Client.cpp  Client.h  ClientInputManager.cpp  ClientInputManager.h  Context.cpp  Context.h  GameFramework.cpp  GameFramework.h  InputEvent.cpp  InputEvent.h  Keycodes.h
Glitter/Sources/Engine/Base/Common/: Common.h  Ptr.h  Reflection.h
Glitter/Sources/Engine/Base/Components/: CameraComponent.h  CommandSingletonComponent.h  HealthComponent.cpp  HealthComponent.h  IdentityComponent.h  RenderComponent.h  TransformComponent.h
Glitter/Sources/Engine/Base/Managers/: EntityAdmin.cpp  EntityAdmin.h  RegionAdmin.cpp  RegionAdmin.h  SystemAdmin.cpp  SystemAdmin.h
Glitter/Sources/Engine/Base/Memory/: ComponentPool.h
Glitter/Sources/Engine/Base/Resource/: EntitySchema.h  MeshResource.cpp  MeshResource.h  PropParser.cpp  PropParser.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Serializer.cpp  Serializer.h
Glitter/Sources/Engine/Base/SingletonComponents/: CommandComponent.h
Glitter/Sources/Engine/Base/Systems/: RenderSystem.cpp  RenderSystem.h
Glitter/Sources/Engine/Base/Types/: Component.cpp  Component.h  Entity.cpp  Entity.h  Object.cpp  System.cpp  System.h  SystemBase.h
Glitter/Sources/Engine/Graphics/Renderer/: RenderTypes.h  Renderer.cpp  Renderer.h
Glitter/Sources/Engine/Graphics/Types/: GraphicsTypes.h  Mesh.h
UnnamedEngine/Sources/: main.cpp
UnnamedEngine/Sources/Engine/Base/Client/: Client.cpp  Client.h  ClientInputManager.cpp  ClientInputManager.h  Context.cpp  Context.h  GameClient.cpp  GameClient.h  GameFramework.cpp  GameFramework.h  InputEvent.cpp  InputEvent.h  Keycodes.cpp  Keycodes.h
UnnamedEngine/Sources/Engine/Base/Common/: Common.h  Ptr.h  Reflection.h
UnnamedEngine/Sources/Engine/Base/Components/: CameraComponent.cpp  CameraComponent.h  HealthComponent.cpp  HealthComponent.h  IdentityComponent .cpp  IdentityComponent.cpp  IdentityComponent.h  RenderComponent.cpp  RenderComponent.h  TransformComponent.cpp  TransformComponent.h  VelocityComponent.cpp  VelocityComponent.h
UnnamedEngine/Sources/Engine/Base/Level/: LevelObject.cpp  LevelObject.h  LevelResource.cpp  LevelResource.h  Ptr.h
UnnamedEngine/Sources/Engine/Base/Managers/: EntityAdmin.cpp  EntityAdmin.h  RegionAdmin.cpp  RegionAdmin.h  SystemAdmin.cpp  SystemAdmin.h  SystemScheduler.cpp  SystemScheduler.h  SystemWorker.cpp  SystemWorker.h
UnnamedEngine/Sources/Engine/Base/Memory/: ArrayPool.cpp  ArrayPool.h  ComponentPool.cpp  ComponentPool.h  ComponentPoolBase.h  HashMapPool.cpp  HashMapPool.h
UnnamedEngine/Sources/Engine/Base/Recording/: Snapshot.cpp  Snapshot.h
UnnamedEngine/Sources/Engine/Base/Resource/: EntityResource.cpp  EntityResource.h  EntitySchema.h  MaterialResource.cpp  MaterialResource.h  MeshResource.cpp  MeshResource.h  ModelPreprocessor.cpp  ModelPreprocessor.h  ModelResource.cpp  ModelResource.h  PropParser.cpp  PropParser.h  PropTree.cpp  PropTree.h  Resource.h  ResourceManager.cpp  ResourceManager.h  ResourcePtr.cpp  ResourcePtr.h  ResourceType.cpp  ResourceType.h  ResourceUtil.cpp  ResourceUtil.h  SerializedComponentTree.h  Serializer.cpp  Serializer.h  ShaderResource.cpp  ShaderResource.h  UDFToken.h  URI.cpp  URI.h
UnnamedEngine/Sources/Engine/Base/Schemas/: AvatarSchema.cpp  AvatarSchema.h
UnnamedEngine/Sources/Engine/Base/Systems/: FreecamPlayerSystem.cpp  FreecamPlayerSystem.h  PlayerInputSystem.cpp  PlayerInputSystem.h  RenderSystem.cpp  RenderSystem.h
UnnamedEngine/Sources/Engine/Base/Types/: Component.cpp  Component.h  ComponentBase.cpp  ComponentBase.h  Entity.cpp  Entity.h  StaticComponent.cpp  StaticComponent.h  StaticRegistry.cpp  StaticRegistry.h  System.cpp  System.h  SystemBase.h
UnnamedEngine/Sources/Engine/Base/Utility/: SingletonLogger.cpp  SingletonLogger.h
UnnamedEngine/Sources/Engine/Graphics/Driver/: GLAttributes.cpp  GLAttributes.h  GLCommon.h  GLDriver.cpp  GLDriver.h  GLMesh.cpp  GLMesh.h  GLModel.cpp  GLModel.h  GLProgram.cpp  GLProgram.h  GLRenderTarget.cpp  GLRenderTarget.h  GLShader.cpp  GLShader.h  GLTexture.cpp  GLTexture.h
UnnamedEngine/Sources/Engine/Graphics/Renderer/: FrameGraph.cpp  FrameGraph.h  GraphicsHandle.h  GraphicsPacket.h  RenderSettings.h  RenderWorker.cpp  RenderWorker.h  Renderer.cpp  Renderer.h
UnnamedEngine/Sources/Engine/Graphics/VulkanDriver/: VulkanApplication.h  VulkanApplicationFactory.cpp  VulkanCommon.h  (+21 more)
UnnamedEngine/Sources/Formats/: LoaderUtil.cpp  LoaderUtil.h  MaterialFormat.cpp  MeshFormat.cpp  MeshFormat.h  ModelLoader.cpp  ModelLoader.h  ModelPreprocessor.cpp  ShaderLoader.cpp  ShaderLoader.h
UnnamedEngine/Sources/Game/: GameManager.cpp
UnnamedEngine/Test/: ECSBench.cpp  ECSTest.cpp  EntityResourceTest.cpp  FatComponent.cpp  FatComponent.h  LevelTest.cpp  MemTest.cpp  MeshPreprocessTest.cpp  PropParserTest.cpp  ResourceTest.cpp  main.cpp
(+12 files in other folders)
